2006-10-11  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/logger.sh:
	  + Exec the post-command when exiting.
	  (closes: #118)

2006-10-11  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/sanitize.sh:
	  + Make sure the $key we test is defined.
	  (closes: #110)

2006-10-11  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/backup-methods.sh:
	  + look for previous DAR archives in the last 30 ones possible.
	  (closes: #127).

2006-10-06  Alexis Sukrieh  <sukria@backup-manager.org>

	* Makefile:
	  + Added SVN properties to track some metadata.
	  + Uses Perl to find out where to install the perl modules
	    ($Config{sitelib}) thanks to Thomas Parmelan.
	  + Build backup-manager-purge.8 manpage as well as
	    backup-manager-upload.8.
	  + New default target `build' so that everything that needs to be built
	    is built when you issue `make'.
	* backup-manager:
	  + Back to the unreleased mode, version is 0.7.5+REV

2006-09-16  Alexis Sukrieh  <sukria@backup-manager.org>

	* AUTHORS:
	  + Bits updated in the AUTHORS file.
	* NEWS:
	  + Release notes for 0.7.5
	* backup-manager:
	  + Release, version, and so on.

2006-09-16  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/backup-methods.sh:
	  + Added `-p ${BM_UPLOAD_SSH_PORT}' when building tarball over SSH so the
	  user can use a different port than 22 (thanks to Henning Bitsch).
	* lib/sanitize.sh:
	  + Some sanitize statement to make sure BM_UPLOAD_SSH_PORT is defined.

2006-09-15  Alexis Sukrieh  <sukria@backup-manager.org>

	* Translation updates, all messages translated in all languages.

2006-09-13  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/backup-methods.sh:
	  + Don't ignore BM_TARBALL_OVER_SSH, if it's set to true, actually do the
	  remote stuff we are expected to (closes: #123).

2006-09-09  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/backup-methods.sh
	  + Uses 'svnadmin -q' for disabling useless verbosity.

2006-09-08  Alexis Sukrieh  <sukria@backup-manager.org>
